--- a/example/ios/OpacityExample.xcodeproj/xcshareddata/xcschemes/OpacityExample.xcscheme
+++ b/example/ios/OpacityExample.xcodeproj/xcshareddata/xcschemes/OpacityExample.xcscheme
@@ -5,13 +5,12 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-
       <PreActions>
          <ExecutionAction
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Invoke Codegen"
-               scriptText = "cd &quot;$WORKSPACE_PATH/../../../&quot; &amp;&amp; npx bob build --target codegen&#10;">
+               scriptText = "# eval &quot;$($HOME/.local/bin/mise activate -C $SRCROOT bash --shims)&quot;&#10;&#10;# cd &quot;$WORKSPACE_PATH/../../../&quot; &amp;&amp; npx bob build --target codegen&#10;">
             </ActionContent>
          </ExecutionAction>
       </PreActions>
