--- a/package.json
+++ b/package.json
@@ -187,7 +187,9 @@
     "outputDir": {
       "android": "android/generated"
     },
-    "javaPackageName": "com.opacity"
+    "android": {
+      "javaPackageName": "com.opacity"
+    }
   },
   "create-react-native-library": {
     "type": "module-new",
