--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -19,6 +19,8 @@ end
 target 'OpacityExample' do
   config = use_native_modules!
 
+  pod 'OpacityCore', :path => '../../../opacity-ios'
+
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
