--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -18,4 +18,13 @@ buildscript {
     }
 }
 
+allprojects {
+  repositories {
+    google()
+    mavenCentral()
+    maven { url "https://maven.mozilla.org/maven2/" }
+    maven { url 'https://jitpack.io' }
+  }
+}
+
 apply plugin: "com.facebook.react.rootproject"
