--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.75.2"
+    "react-native": "0.75.2",
+    "react-native-dotenv": "^3.4.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,8 +22,8 @@
     "@react-native/babel-preset": "0.75.2",
     "@react-native/metro-config": "0.75.2",
     "@react-native/typescript-config": "0.75.2",
-    "react-native-builder-bob": "^0.30.2",
-    "react-native-dotenv": "^3.4.11"
+    "@types/react-native-dotenv": "^0.2.2",
+    "react-native-builder-bob": "^0.30.2"
   },
   "engines": {
     "node": ">=18"
