--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator='iPhone 16 Pro'",
     "start": "react-native start",
     "pods": "cd ios && pod install && rm -rf ./ios/.xcode.env.local",
     "build:android": "react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
