--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -7,7 +7,7 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, "14.0"
+platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
@@ -16,7 +16,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'OpacityExample' do
+target 'OpacityRN' do
   config = use_native_modules!
 
   use_react_native!(
@@ -25,7 +25,7 @@ target 'OpacityExample' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'OpacityExampleTests' do
+  target 'OpacityRNTests' do
     inherit! :complete
     # Pods for testing
   end
