Almost working Android Module

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -63,7 +63,6 @@ android {
     prefabPublishing true
   }
 
-  ndkVersion getExtOrDefault("ndkVersion")
   compileSdkVersion getExtOrIntegerDefault("compileSdkVersion")
 
   defaultConfig {
@@ -71,19 +70,6 @@ android {
     targetSdkVersion getExtOrIntegerDefault("targetSdkVersion")
     buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
 
-    externalNativeBuild {
-      cmake {
-        arguments '-DANDROID_STL=c++_shared'
-        cppFlags "-O2 -frtti -fexceptions -Wall -fstack-protector-all"
-        abiFilters (*reactNativeArchitectures())
-      }
-    }
-  }
-
-  externalNativeBuild {
-    cmake {
-      path "CMakeLists.txt"
-    }
   }
 
   buildFeatures {
@@ -121,6 +107,7 @@ repositories {
   mavenCentral()
   google()
   maven { url "https://maven.mozilla.org/maven2/" }
+  maven { url 'https://jitpack.io' }
 }
 
 def kotlin_version = getExtOrDefault("kotlinVersion")
@@ -133,8 +120,7 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation "androidx.security:security-crypto:1.1.0-alpha06"
   implementation "org.mozilla.geckoview:geckoview-nightly:132.0.20240918041351"
-  implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.1.0"
-//  implementation 'com.facebook.fbjni:fbjni:0.6.0'
+  api "com.github.OpacityLabs:opacity-android:3.23.50"
 }
 
 if (isNewArchitectureEnabled()) {
