--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,11 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
+      - name: Fix permissions on cli
+        run: |
+          chmod u+x node_modules/@react-native-community/cli/build/*.js
+          chmod u+x node_modules/.bin/rnc-cli
+
       - name: Cache cocoapods
         id: cocoapods-cache
         uses: actions/cache@v3
