--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
+      - name: Fix permissions on cli
+        run: |
+          chmod u+x node_modules/@react-native-community/cli/build/*.js
+          chmod u+x node_modules/.bin/rnc-cli
+
       - name: Update package.json version
         run: |
           TAG_NAME=${GITHUB_REF#refs/tags/}
