--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opacity-labs/react-native-opacity",
-  "version": "3.23.13",
+  "version": "0.0.0",
   "description": "Opacity Networks library for React Native",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
@@ -127,23 +127,35 @@
   },
   "react-native-builder-bob": {
     "source": "src",
-    "output": "lib"
+    "output": "lib",
+    "targets": [
+      [
+        "commonjs",
+        {
+          "esm": true
+        }
+      ],
+      [
+        "module",
+        {
+          "esm": true
+        }
+      ],
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json",
+          "esm": true
+        }
+      ]
+    ]
   },
   "codegenConfig": {
     "name": "RNOpacitySpec",
     "type": "modules",
     "jsSrcsDir": "src",
-    "outputDir": {
-      "ios": "ios/generated",
-      "android": "android/generated"
-    },
     "android": {
       "javaPackageName": "com.opacitylabs.rn"
     }
-  },
-  "create-react-native-library": {
-    "type": "turbo-module",
-    "languages": "kotlin-objc",
-    "version": "0.45.5"
   }
 }
