--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,5 @@
+import com.android.Version
+
 buildscript {
   // Buildscript is evaluated before everything else so we can't use getExtOrDefault
   def kotlin_version = rootProject.ext.has("kotlinVersion") ? rootProject.ext.get("kotlinVersion") : project.properties["Opacity_kotlinVersion"]
@@ -38,8 +40,8 @@ def getExtOrIntegerDefault(name) {
   return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["Opacity_" + name]).toInteger()
 }
 
-def supportsNamespace() {
-  def parsed = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')
+static def supportsNamespace() {
+  def parsed = Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')
   def major = parsed[0].toInteger()
   def minor = parsed[1].toInteger()
 
@@ -119,7 +121,7 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation "androidx.security:security-crypto:1.1.0-alpha06"
   implementation "org.mozilla.geckoview:geckoview-nightly:132.0.20240918041351"
-  api "com.github.OpacityLabs:opacity-android:4.0.4"
+  api "com.github.OpacityLabs:opacity-android:4.0.14"
 }
 
 if (isNewArchitectureEnabled()) {
