--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "devDependencies": {
     "@evilmartians/lefthook": "^1.5.0",
+    "@expo/config-plugins": "^9.0.14",
     "@react-native-community/cli": "15.0.1",
     "@react-native/eslint-config": "^0.73.1",
     "@types/jest": "^29.5.5",
