add app.plugin.js to the exports field

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "default": "./lib/commonjs/index.js"
       }
     },
+    "./app.plugin": "./app.plugin.js",
     "./package.json": "./package.json"
   },
   "files": [
