--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "default": "./lib/commonjs/index.js"
       }
     },
-    "./app.plugin": "./app.plugin.js",
+    "./app.plugin.js": "./app.plugin.js",
     "./package.json": "./package.json"
   },
   "files": [
