--- a/example/package.json
+++ b/example/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.77.0",
-    "react-native-dotenv": "^3.4.11"
+    "react-native-dotenv": "^3.4.11",
+    "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
