--- a/package.json
+++ b/package.json
@@ -2,19 +2,13 @@
   "name": "@opacity-labs/react-native-opacity",
   "version": "0.0.0",
   "description": "Opacity Networks library for React Native",
-  "source": "./src/index.tsx",
-  "main": "./lib/commonjs/index.js",
-  "module": "./lib/module/index.js",
+  "main": "./lib/module/index.js",
+  "types": "./lib/typescript/src/index.d.ts",
   "exports": {
     ".": {
-      "import": {
-        "types": "./lib/typescript/module/src/index.d.ts",
-        "default": "./lib/module/index.js"
-      },
-      "require": {
-        "types": "./lib/typescript/commonjs/src/index.d.ts",
-        "default": "./lib/commonjs/index.js"
-      }
+      "source": "./src/index.tsx",
+      "types": "./lib/typescript/src/index.d.ts",
+      "default": "./lib/module/index.js"
     },
     "./app.plugin.js": "./app.plugin.js",
     "./package.json": "./package.json"
@@ -23,9 +17,9 @@
     "app.plugin.js",
     "expo-plugin",
     "src",
+    "lib",
     "android",
     "ios",
-    "lib",
     "cpp",
     "*.podspec",
     "react-native.config.js",
@@ -47,7 +41,6 @@
     "prepack": "bob build && yarn build:expo:plugin",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
     "prepare": "bob build && yarn build:expo:plugin",
-    "release": "release-it",
     "build:expo:plugin": "tsc -p ./expo-plugin/tsconfig.json"
   },
   "keywords": [
@@ -72,18 +65,16 @@
     "@evilmartians/lefthook": "^1.5.0",
     "@expo/config-plugins": "^9.0.14",
     "@react-native-community/cli": "15.0.1",
-    "@react-native/eslint-config": "^0.73.1",
+    "@react-native/babel-preset": "0.79.2",
+    "@react-native/eslint-config": "^0.78.0",
     "@types/jest": "^29.5.5",
-    "@types/react": "^18.2.44",
+    "@types/react": "^19.0.0",
     "del-cli": "^5.1.0",
     "prettier": "^3.0.3",
-    "react": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-builder-bob": "^0.35.2",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-builder-bob": "^0.40.11",
     "typescript": "^5.2.2"
-  },
-  "resolutions": {
-    "@types/react": "^18.2.44"
   },
   "peerDependencies": {
     "react": "*",
@@ -136,12 +127,6 @@
     "output": "lib",
     "targets": [
       [
-        "commonjs",
-        {
-          "esm": true
-        }
-      ],
-      [
         "module",
         {
           "esm": true
@@ -150,8 +135,7 @@
       [
         "typescript",
         {
-          "project": "tsconfig.build.json",
-          "esm": true
+          "project": "tsconfig.build.json"
         }
       ]
     ]
@@ -163,5 +147,10 @@
     "android": {
       "javaPackageName": "com.opacitylabs.rn"
     }
+  },
+  "create-react-native-library": {
+    "languages": "kotlin-objc",
+    "type": "turbo-module",
+    "version": "0.50.3"
   }
 }
