--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "pods": "cd ios && rm -f Podfile.lock && rm -rf Pods && pod install --repo-update && rm -rf ./ios/.xcode.env.local",
     "build:android": "react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
-    "build:ios": "react-native build-ios -mode Debug",
+    "build:ios": "react-native build-ios --mode Debug",
     "nuke": "rm -rf node_modules && rm -rf ios/Pods && rm -rf ios/Podfile.lock && rm -rf ios/build && yarn && yarn pods"
   },
   "dependencies": {
